[project]
name = "bl-tracker"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "playwright>=1.42",
  "beautifulsoup4>=4.12",
  "reverse_geocoder>=1.5.1",
  "openpyxl>=3.1",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pyinstaller>=6.5",
]

[project.scripts]
bl-tracker = "bl_tracker.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
